[tool.poetry]
name = "kasa-cli"
version = "0.1.0"
description = ""
authors = ["Jim Kring <jim.kring@jki.net>"]

[tool.poetry.dependencies]
python = "^3.10"
python-kasa = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Nuitka = "^0.9.1"
ordered-set = "^4.1.0"

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[nuitka]
# These are not recommended, but they make it obvious to have effect.

# boolean option, e.g. if you cared for C compilation commands, leading
# dashes are omitted
# show-scons = true

# options with single values, e.g. enable a plugin of Nuitka
# enable-plugin = pyside2

# options with several values, e.g. avoiding including modules, accepts
# list argument.
# nofollow-import-to = ["*.tests", "*.distutils"]

onefile = true
standalone = true
